texi2html/test/invalid/res_all/texi_def_cmd_dble/def_cmd_dble.texi
\input texinfo @c -*-texinfo-*-
@setfilename def_cmd_dble.info
@node Top
@top Test for double definition commands

@deffn func plot (a, b, c, ...) @deffnx func plot2 (a, b, c, ..., d)
aaa
@end deffn

@deffn func aaaa args  @defvr c--ategory d--efvr_name
bbb
@end deffn

@bye
